<resources>
    <string name="app_name">WallQuotes</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register Here</string>
    <string name="edit">Edit</string>
    <string name="itsMe">It\'s me</string>
    <string name="delete_quote">Delete quote</string>
    <string name="like_quote">Like Quote</string>
    <string name="share_quote">Share Quote</string>
    <string name="edit_quote">Edit Quote</string>
    <string name="double_quote_background">double quote background</string>
    <string name="tags">Tags</string>
    <string name="quotes">Quotes</string>

    <string name="login_state_key">LOGIN</string>
    <string name="add_quote">Add Quote</string>
    <string name="publish_quote">Publish Quote</string>
    <string name="liked">Liked</string>
    <string name="add_new_quote">Add new quote</string>
</resources>