<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editor_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/quote_background">

        <TextView
            android:id="@+id/edit_quote_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_elevation"
            android:fontFamily="@font/playfairdisplay_semibold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/edit_quote_text_padding_horizontal"
            android:textColor="@color/dark_quote_text"
            android:textSize="@dimen/edit_quote_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Design isn't finished until somebody is using it" />

        <TextView
            android:id="@+id/edit_author_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_author_text_margin_top"
            android:fontFamily="@font/gordita_medium"
            android:textColor="@color/dark_quote_text"
            android:textSize="@dimen/edit_quote_author_text_size"
            app:layout_constraintEnd_toEndOf="@+id/edit_quote_textView"
            app:layout_constraintStart_toStartOf="@+id/edit_quote_textView"
            app:layout_constraintTop_toBottomOf="@+id/edit_quote_textView"
            tools:text="Jeff Lindsay" />

        <ImageButton
            android:id="@+id/edit_publish_imageButton"
            android:layout_width="@dimen/default_quote_button_size"
            android:layout_height="@dimen/default_quote_button_size"
            android:elevation="@dimen/default_elevation"
            android:background="@drawable/pager_quote_button_background"
            android:src="@drawable/ic_publish"
            android:layout_marginBottom="@dimen/edit_buttons_margin_bottom"
            android:contentDescription="@string/publish_quote"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_TextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_share_imageButton" />

        <ImageButton
            android:id="@+id/edit_share_imageButton"
            android:layout_width="@dimen/default_quote_button_size"
            android:layout_height="@dimen/default_quote_button_size"
            android:elevation="@dimen/default_elevation"
            android:background="@drawable/pager_quote_button_background"
            android:src="@drawable/ic_share"
            android:layout_marginBottom="@dimen/edit_buttons_margin_bottom"
            android:contentDescription="@string/share_quote"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_TextField"
            app:layout_constraintEnd_toStartOf="@+id/edit_publish_imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_TextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>