<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="quote"
            type="com.web0zz.wallquotes.domain.model.Quotes" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="6dp">

        <ImageButton
            android:id="@+id/item_update_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:elevation="10dp"
            android:background="@drawable/quote_button_background"
            android:padding="10dp"
            android:src="@drawable/ic_edit"
            android:visibility="gone"
            android:contentDescription="@string/edit_quote"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/item_like_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageButton
            android:id="@+id/item_share_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:elevation="10dp"
            android:background="@drawable/quote_button_background"
            android:padding="13dp"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_quote"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageButton
            android:id="@+id/item_like_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/quote_button_background"
            android:padding="10dp"
            android:src="@drawable/ic_unselected_like"
            android:contentDescription="@string/like_quote"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/item_share_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageButton
            android:id="@+id/item_delete_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/quote_button_background"
            android:padding="10dp"
            android:src="@drawable/ic_delete"
            android:visibility="gone"
            android:contentDescription="@string/delete_quote"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/common_buttons_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="item_like_imageButton, item_share_imageButton"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/personal_buttons_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="item_delete_imageButton, item_update_imageButton"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quote_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/quote_item_backgroun"
                android:minHeight="150dp">

                <TextView
                    android:id="@+id/item_quote_body_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfairdisplay_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="30dp"
                    android:text="@{quote.body}"
                    android:textColor="@color/quote_text"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Design isn't finished until somebody is using it " />

                <TextView
                    android:id="@+id/item_author_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/gordita_medium"
                    android:gravity="center"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="13dp"
                    android:text="@{quote.authorName}"
                    android:textColor="@color/quote_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/item_quote_body_textView"
                    app:layout_constraintStart_toStartOf="@+id/item_quote_body_textView"
                    app:layout_constraintTop_toBottomOf="@+id/item_quote_body_textView"
                    tools:text="Jeff Lindsay" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>