<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="quotes"
            type="com.web0zz.wallquotes.domain.model.Quotes" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/quote_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/background_quote_small_size"
            android:layout_height="@dimen/background_quote_small_size"
            android:layout_marginStart="@dimen/background_quote_top_margin_start"
            android:layout_marginTop="@dimen/background_quote_top_margin_top"
            android:contentDescription="@string/double_quote_background"
            android:src="@drawable/double_quote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/quota_view_color"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="@dimen/background_quote_big_size"
            android:layout_height="@dimen/background_quote_big_size"
            android:layout_marginEnd="@dimen/background_quote_bottom_margin_end"
            android:layout_marginBottom="@dimen/background_quote_bottom_margin_bottom"
            android:rotationY="-180"
            android:src="@drawable/double_quote"
            android:contentDescription="@string/double_quote_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/quota_view_color" />

        <TextView
            android:id="@+id/quote_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_elevation"
            android:fontFamily="@font/playfairdisplay_semibold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/slide_quote_text_padding_horizontal"
            android:text="@{quotes.body}"
            android:textColor="@color/dark_quote_text"
            android:textSize="@dimen/slide_quote_body_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Design isn't finished until somebody is using it" />

        <TextView
            android:id="@+id/author_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/slide_author_text_margin_top"
            android:fontFamily="@font/gordita_medium"
            android:text="@{quotes.authorName}"
            android:textColor="@color/dark_quote_text"
            android:textSize="@dimen/slide_quote_author_size"
            app:layout_constraintEnd_toEndOf="@+id/quote_textView"
            app:layout_constraintStart_toStartOf="@+id/quote_textView"
            app:layout_constraintTop_toBottomOf="@+id/quote_textView"
            tools:text="Jeff Lindsay" />

        <ImageButton
            android:id="@+id/quotes_like_imageButton"
            android:layout_width="@dimen/slide_default_button_size"
            android:layout_height="@dimen/slide_default_button_size"
            android:elevation="@dimen/default_elevation"
            android:background="@drawable/pager_quote_button_background"
            android:src="@drawable/ic_unselected_like"
            android:layout_marginBottom="@dimen/slide_default_bottom_margin_bottom"
            android:contentDescription="@string/like_quote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quotes_share_imageButton" />

        <ImageButton
            android:id="@+id/quotes_share_imageButton"
            android:layout_width="@dimen/slide_default_button_size"
            android:layout_height="@dimen/slide_default_button_size"
            android:elevation="@dimen/default_elevation"
            android:background="@drawable/pager_quote_button_background"
            android:src="@drawable/ic_share"
            android:layout_marginBottom="@dimen/slide_default_bottom_margin_bottom"
            android:contentDescription="@string/share_quote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quotes_like_imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>